fixed button alignment, removed light blue button css and changed to bootstrap way

--- a/www/css/bootswatch.less
+++ b/www/css/bootswatch.less
@@ -95,26 +95,10 @@ body {
 .btn-warning {
   .buttonBackground(lighten(@orange, 15%), @orange);
 }
-.btn-cute-blue{
+.btn-light-blue{
     .buttonBackground(#4ac6ec,#1cb8e7);
 }
-.btn-light-blue
-{
-  background-color: hsl(194, 81%, 51%) !important;
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#4ac6ec", endColorstr="#1cb8e7");
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#4ac6ec), to(#1cb8e7));
-  background-image: -moz-linear-gradient(top, #4ac6ec, #1cb8e7);
-  background-image: -ms-linear-gradient(top, #4ac6ec, #1cb8e7);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #4ac6ec), color-stop(100%, #1cb8e7));
-  background-image: -webkit-linear-gradient(top, #4ac6ec, #1cb8e7);
-  background-image: -o-linear-gradient(top, #4ac6ec, #1cb8e7);
-  background-image: linear-gradient(#4ac6ec, #1cb8e7);
-  border-color: #1cb8e7 #1cb8e7 hsl(194, 81%, 48.5%);
-  color: #333 !important;
-  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.16);
-  -webkit-font-smoothing: antialiased;
-}
+
 
 // FORMS
 // -----------------------------------------------------
